--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,8 @@
           * WidgetUI: New dialog to load/save binary data (Gergely Szasz).
           * WidgetUI: Enable HOME and END keys in menus on widget UIs (Gergely
             Szasz).
+          * WidgetUI: Use monospaced characters on memory browser (Gergely
+            Szasz).
           * WidgetUI: Fix crash when trying to overwrite read-only files (Pedro
             Luis Rodríguez González).
 
