--- a/README
+++ b/README
@@ -24,10 +24,12 @@ What Fuse does have:
 * Emulation of some of the printers you could attach to a Spectrum.
 * Support for the RZX input recording file format, including
   rollback and 'competition mode'.
-* Emulation of the Currah µSource, DivIDE, DivMMC, Interface 1, Kempston mouse,
-  Multiface One/128/3, Spectrum +3e, ZXATASP, ZXCF and ZXMMC interfaces.
+* Emulation of the Currah µSource, Interface 1, Kempston mouse,
+  Multiface One/128/3 and TTX2000S interfaces.
 * Emulation of the Covox, Fuller audio box, Melodik and SpecDrum audio
   interfaces.
+* Emulation of the DivIDE, DivMMC, Spectrum +3e, ZXATASP, ZXCF and ZXMMC
+  storage interfaces.
 * Emulation of the Beta 128, +D, Didaktik 80/40, DISCiPLE and Opus Discovery
   disk interfaces.
 * Emulation of the Spectranet and SpeccyBoot network interfaces.
