--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-2019-??-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2021-02-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+
+        * Fuse 1.6.0 released.
 
         * New features:
           * Add TTX2000S emulation (Guesser).
