--- a/ChangeLog
+++ b/ChangeLog
@@ -17,14 +17,18 @@
             Kendall).
           * GTK+ UI: Add Fuse icon to the about dialog and the main window
             (Alberto Garcia).
-          * GTK+ UI: Load/save binary dialog remember last values (Derek
+          * GTK+ UI: Load/save binary dialog remembers last values (Derek
             Fountain).
           * GTK+ 3 UI: Improve moving and sizing Fuse's window under Wayland
             (Sergio Baldoví).
           * GTK+ 3 UI: Fix kempston mouse values on Wayland (thanks, Philip
             Kendall) (Sergio Baldoví).
+          * GTK+ 3 UI: Fix bug when resizing from 2x to 3x on GTK+ UI (Sergio
+            Baldoví)
           * SDL UI: Fix crash when using dispmanx backend on the Raspberry Pi
             (Jools Wills).
+          * SDL UI: Allow forcing fullscreen mode when SDL doesn't report
+            available screen modes (Sergio Baldoví).
           * WidgetUI: New dialog to load/save binary data (Gergely Szasz).
           * WidgetUI: Enable HOME and END keys in menus on widget UIs (Gergely
             Szasz).
@@ -32,6 +36,7 @@
             Szasz).
           * WidgetUI: Fix crash when trying to overwrite read-only files (Pedro
             Luis Rodríguez González).
+          * Win32: Fix bitwise operation in debugger (Sergio Baldoví).
 
         * Scaler improvements:
           * Fix display corruption with HQ 3x scaler (thanks, Philip Kendall)
@@ -53,6 +58,8 @@
             Sergio Baldoví).
           * Suppress a couple of -Wunused-result warnings from gcc (Alberto
             Garcia).
+          * Improve error message when opening a directory from the command
+            line (thanks, Philip Kendall) (Alberto Garcia and Sergio Baldoví).
 
 2018-12-09  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
