--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2021-02-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2021-02-20  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.6.0 released.
 
