--- a/INSTALL
+++ b/INSTALL
@@ -8,8 +8,8 @@ $ ./configure
 There are now some options you can give to configure; `configure
 --help' will list them all, but the most important are:
 
---with-fb		Use the framebuffer interface, rather than GTK+.
---with-sdl		Use the SDL interface, rather than GTK+.
+--with-fb		Use the framebuffer interface, rather than GTK.
+--with-sdl		Use the SDL interface, rather than GTK.
 --with-svgalib		Use the SVGAlib interface.
 --without-gtk		Use the plain Xlib interface.
 
