--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
            found (Alberto Garcia).
          * WidgetUI: rearrange AY register and Z80 flags in the debugger
            (Gergely Szasz).
+         * GTK UI: Fix loading binary data from deleted files (thanks, Crisis).
 
 2021-02-27  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
